# ecommerce-api

./: .env-example  .gitignore  Dockerfile  LICENSE.txt  README.md  clear_migrations.sh  compose.yaml  pyproject.toml
ecommerce/: refresh_token.py  settings.py  urls.py
ecommerce/core/: admin.py  celery.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py  viewsets.py
ecommerce/core/fixtures/: addresses.json  phone.json
ecommerce/core/management/commands/: load_fixtures.py
ecommerce/core/migrations/: 0001_initial.py  0002_initial.py  0003_alter_phone_supplier_alter_phone_user.py
ecommerce/core/tests/: test_phones.py
ecommerce/core/tests/integration/: test_address.py  test_phones.py
ecommerce/core/tests/unit/: test_models.py
ecommerce/orders/: middleware.py  models.py  urls.py  views.py
ecommerce/orders/admin/: __init__.py  order.py  order_item.py
ecommerce/orders/fixtures/: order_items.json  orders.json
ecommerce/orders/migrations/: 0001_initial.py  0002_initial.py  0003_alter_order_user.py
ecommerce/orders/models/: __init__.py  order.py  order_item.py
ecommerce/orders/serializers/: order.py  order_item.py
ecommerce/orders/tests/unit/models/: order.py  order_item.py  test_order.py  test_order_item.py
ecommerce/orders/tests/unit/serializers/: test_order.py  test_order_item.py
ecommerce/orders/views/: order.py  order_item.py
ecommerce/products/: models.py
ecommerce/store/: urls.py  utils.py  views.py
ecommerce/store/admin/: __init__.py  category.py  product.py  product_supplier.py  store.py  subcategory.py
ecommerce/store/fixtures/: categories.json  product_supplier.json  products.json  store.json  subcategories.json
ecommerce/store/migrations/: 0001_initial.py  0002_initial.py  0003_rename_subcategories_product_subcategory_and_more.py  0004_alter_productsupplier_delivery_date_and_more.py
ecommerce/store/models/: __init__.py  category.py  product.py  product_supplier.py  store.py  subcategory.py
ecommerce/store/serializers/: category.py  product.py  subcategory.py
ecommerce/store/tests/integration/: test_category.py  test_product.py  test_subcategory.py
ecommerce/store/tests/unit/models/: test_category_models.py  test_product_models.py
ecommerce/store/tests/unit/serializers/: test_category_models.py  test_product_models.py  test_subcategory_models.py
ecommerce/store/views/: category.py  product.py  subcategory.py
ecommerce/users/: abstract_models.py  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  viewsets.py
ecommerce/users/admin/: __init__.py  address.py  phone.py  profile.py  supplier.py  user.py
ecommerce/users/fixtures/: addresses.json  phones.json  suppliers.json  users.json
ecommerce/users/migrations/: 0001_initial.py  0002_alter_address_user_alter_phone_user.py  0002_alter_user_options_remove_user_first_name_and_more.py  0003_profile.py  0003_user_first_name_user_last_name.py  0004_remove_user_first_name_remove_user_last_name.py
ecommerce/users/models/: __init__.py  address.py  book.py  phone.py  profile.py  supplier.py  user.py
ecommerce/users/serializers/: address.py  phone.py  profile.py  supplier.py  user.py
ecommerce/users/tests/integration/: test_address.py  test_phones.py  test_user.py
ecommerce/users/tests/integration/serializers/: test_address.py  test_phone.py
ecommerce/users/tests/unit/: test_address_models.py  test_address_phone_models.py  test_models.py  test_user_models.py
ecommerce/users/tests/unit/models/: test_address.py  test_phone.py  test_user.py
ecommerce/users/tests/unit/serializers/: test_address.py  test_phone.py  test_user.py
ecommerce/users/views/: address.py  phone.py  profile.py  supplier.py  user.py
